<?xml version="1.0"?>
<package format="2">
  <name>hajime_walk_ros</name>
  <version>0.0.0</version>
  <description>The hajime_walk ros package</description>
  <maintainer email="supratmanjoshua@gmail.com">Joshua Supratman</maintainer>
  <license>Apache License, Version 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>opr_msgs</depend>

</package>
