<?xml version="1.0"?>
<package format="2">
  <name>opr_kondo_driver</name>
  <version>0.0.0</version>
  <description>The opr_kondo_driver package</description>
  <maintainer email="supratmanjoshua@gmail.com">jsupratman13</maintainer>
  <license>Apache License, Version 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>libusb-dev</depend>
  <depend>libftdi-dev</depend>
  <depend>hardware_interface</depend>
  <depend>roscpp</depend>
  <depend>joint_state_controller</depend>
  <depend>position_controllers</depend>

  <build_depend>message_generation</build_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
