<?xml version="1.0"?>
<package format="2">
  <name>opr_ros</name>
  <version>0.0.0</version>
  <description>The opr_ros package</description>
  <maintainer email="supratmanjoshua@gmail.com">Joshua Supratman</maintainer>
  <license>Apache License, Version 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>hajime_walk_ros</exec_depend>
  <exec_depend>opr_bringup</exec_depend>
  <exec_depend>opr_description</exec_depend>
  <exec_depend>opr_gazebo</exec_depend>
  <exec_depend>opr_kondo_driver</exec_depend>
  <exec_depend>opr_msgs</exec_depend>
  <exec_depend>opr_ros_control</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
