<?xml version="1.0"?>
<package format="2">
  <name>opr_ros_control</name>
  <version>0.0.0</version>
  <description>The opr_ros_control package</description>
  <maintainer email="supratmanjoshua@gmail.com">Joshua Supratman</maintainer>
  <license>Apache License, Version 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>ros_control</build_depend>
  <build_depend>ros_controllers</build_depend>
  <build_depend>effort_controllers</build_depend>
  <build_depend>position_controllers</build_depend>
  <build_depend>joint_trajectory_controller</build_depend>
  <build_depend>joint_state_controller</build_depend>

</package>
