<?xml version="1.0"?>
<package format="2">
  <name>opr_vision</name>
  <version>0.0.0</version>
  <description>The opr_vision package</description>

  <maintainer email="supratmanjoshua@gmail.com">Joshua Supratman</maintainer>
  <license>Apache License, Version 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>uvc_camera</exec_depend>
  <exec_depend>darknet_ros</exec_depend>

</package>
